modules/03-network-resiliency/timeouts-retries-circuitbreaking/productcatalog-retries-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalog
  namespace: workshop
spec:
  hosts:
  - productcatalog
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productcatalog
        port:
          number: 5000
    timeout: 2s
    retries:
      attempts: 2
      perTryTimeout: 0.5s
